ulteriori modifiche per responsive

--- a/View/inseriscirecensione.html
+++ b/View/inseriscirecensione.html
@@ -29,6 +29,7 @@
 
         <link href="font.css" rel="stylesheet">
         <link rel="stylesheet" href="casipaziente.css">
+        <link href="responsive.css" rel="stylesheet">
 
 <!--
 
@@ -130,10 +131,10 @@ https://templatemo.com/tm-566-medic-care
                                     </label>
                                   </fieldset>
                             <br><br><br>
-                            <div style="position: absolute;left: 550px;">
-                            <button type="submit" class="btn btn-primary" style="width: 140px;height: 35px;">Annulla</button>
+                            <div>
+                            <button type="submit" class="btn btn-primary" id="annulla">Annulla</button>
                             &ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;
-                            <button type="submit" class="btn btn-primary" style="width: 140px;height: 35px;">Conferma</button>
+                            <button type="submit" class="btn btn-primary" id="conferma">Conferma</button>
                             </div>
                         </div>
                     </form>
