--- a/View/modificaappuntamento_profilomedico.html
+++ b/View/modificaappuntamento_profilomedico.html
@@ -28,6 +28,7 @@
 
         <link href="css/templatemo-medic-care.css" rel="stylesheet">
 
+        <link href="responsive.css" rel="stylesheet">
 <!--
 
 TemplateMo 566 Medic Care
@@ -95,12 +96,12 @@ https://templatemo.com/tm-566-medic-care
             <div class="row">
                 <div class="col">
                     <br>
-                    <h1>Modifica Appuntamento</h1>
+                    <h2>Modifica Appuntamento</h2>
                     <br><br>
-                    <h2>Paziente : Giacomo Giannini</h2>
-                    <h2>Medico : Dott. Emanuele Papile</h2>
-                    <h2>Esame : Visita Neurologica</h2>
-                    <h2>Costo: 70€</h2>
+                    <h3>Paziente : Giacomo Giannini</h3>
+                    <h3>Medico : Dott. Emanuele Papile</h3>
+                    <h3>Esame : Visita Neurologica</h3>
+                    <h3>Costo: 70€</h3>
                     <br><br>
                     <form action="#">
                         <div class="form-group"></div>
@@ -113,11 +114,11 @@ https://templatemo.com/tm-566-medic-care
                             <br>
                             <label for="nuovadata">Nuova Ora Appuntamento: </label>
                             <input type="time" id="datanuova" name="datanuova" /></h3>
-                            <br><br><br><br><br>
-                            <div style="position: absolute;left: 550px;">
-                                <button type="submit" class="btn btn-primary" style="width: 140px;height: 35px;">Annulla</button>
+                            <br><br>
+                            <div>
+                                <button type="submit" class="btn btn-primary" id="annulla">Annulla</button>
                                 &ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;
-                                <button type="submit" class="btn btn-primary" style="width: 140px;height: 35px;">Conferma</button>
+                                <button type="submit" class="btn btn-primary" id="conferma">Conferma</button>
                                 </div>
                         </div>
                     </form>
