--- a/View/profilomedico.html
+++ b/View/profilomedico.html
@@ -28,13 +28,10 @@
 
         <link href="css/templatemo-medic-care.css" rel="stylesheet">
         <link href="font.css" rel="stylesheet">
+        <link href="responsive.css" rel="stylesheet">
     </head>
 <body id="top">
-    
-    <br>
-    <header id="header">
-        <h1 style="font-size: 45px;"><b>Profilo Personale - Dott. Emanuele Papile</b> </h1>
-	</header>
+    <main>
     <nav class="navbar navbar-expand-lg bg-light fixed-top shadow-lg">
                 <div class="container">
                     <div class="navbar-brand mx-auto d-lg-none">
@@ -83,9 +80,11 @@
 
                 </div>
             </nav>
-    <br><br>
+        </main>
+    <br>
+    <h2>Profilo Personale - Dott. Emanuele Papile</h2>
     <div>
-        <h2 style="font-size: 25px;"><b>Informazioni Personali</b> </h2>
+        <h4 >Informazioni Personali</h4>
                     <p style='font-size:20px;font-family: monospace; font-weight:bold;'> Nome:</p>
                     <p style='font-size:20px; font-family:monospace;'>Emanuele</p>
                     <p style='font-size:20px;font-family: monospace; font-weight:bold;'> Cognome:</p>
@@ -97,6 +96,11 @@
                     <a href='logout.php'><button class='btn btn-primary' style='width:195px;'>Logout</button></a>
                     <a href='modifica_dati_medico.html'><button class='btn btn-primary' style='width:195px;'>Modifica Dati</button></a>
                     <a href='reimp_password_medico.html'><button class='btn btn-primary' style='width:195px;'>Reimposta Password</button></a>
-                 </div>
+            </div>
+            <script src="js/jquery.min.js"></script>
+            <script src="js/bootstrap.bundle.min.js"></script>
+            <script src="js/owl.carousel.min.js"></script>
+            <script src="js/scrollspy.min.js"></script>
+            <script src="js/custom.js"></script>
 </body>
 </html>
