--- a/View/profilopaziente.html
+++ b/View/profilopaziente.html
@@ -27,13 +27,11 @@
         <link href="css/templatemo-medic-care.css" rel="stylesheet">
         <link href="font.css" rel="stylesheet">
         <link href="casipaziente.css" rel="stylesheet">
+        <link href="responsive.css" rel="stylesheet">
     </head>
 <body id="top">
     
-    <br>
-    <header id="header">
-        <h1 style="font-size: 45px;"><b>Profilo Personale - Sig. Andrea Iannotti</b> </h1>
-	</header>
+    
     <nav class="navbar navbar-expand-lg bg-light fixed-top shadow-lg">
                 <div class="container">
                     <div class="navbar-brand mx-auto d-lg-none">
@@ -73,9 +71,9 @@
 
                 </div>
             </nav>
-    <br><br>
     <div>
-        <h2 style="font-size: 25px;"><b>Informazioni Personali</b> </h2>
+        <h2> Profilo Personale - Sig. Andrea Iannotti</h2>
+        <h4>Informazioni Personali </h4>
                     <p style='font-size:20px;font-family: monospace; font-weight:bold;'> Nome:</p>
                     <p style='font-size:20px; font-family:monospace;'>Andrea</p>
                     <p style='font-size:20px;font-family: monospace; font-weight:bold;'> Cognome:</p>
@@ -96,5 +94,10 @@
                     <a href='modifica_dati_paziente.html'><button class='btn btn-primary' style='width:195px;'>Modifica Dati</button></a>
                     <a href='reimp_password_paziente.html'><button class='btn btn-primary' style='width:195px;'>Reimposta Password</button></a>
                  </div>
+                 <script src="js/jquery.min.js"></script>
+                 <script src="js/bootstrap.bundle.min.js"></script>
+                 <script src="js/owl.carousel.min.js"></script>
+                 <script src="js/scrollspy.min.js"></script>
+                 <script src="js/custom.js"></script>
 </body>
 </html>
