--- a/View/reimp_password_medico.html
+++ b/View/reimp_password_medico.html
@@ -26,25 +26,14 @@
         <link href="font.css" rel="stylesheet">
 
         <link rel="stylesheet" href="logregstyle.css">
+        <link rel="stylesheet" href="responsive.css">
         
     </head>
     <body style="background-color: #9fc2fa;">
         <form method="post" action="reimp_password_medico.php" style="width: 600px;">
             <h1 style="font-size: 34px;">REIMPOSTAZIONE PASSWORD</h1>
-            <!--<label style="font-style: 'Open Sans', sans-serif;font-size: 16px;font-weight: bold;">Nome</label>
-            <input type="text" id="nome" name="nome" >
-            <label style="font-style: 'Open Sans', sans-serif;font-size: 16px;font-weight: bold;">Cognome</label>
-            <input type="text" id="cognome" name="cognome" >
-            <label style="font-style: 'Open Sans', sans-serif;font-size: 16px;font-weight: bold;">Email</label>
-            <input type="text" id="email" name="email" >
-            <label style="font-style: 'Open Sans', sans-serif;font-size: 16px;font-weight: bold;">Costo</label>
-            <input type="text" id="costo" name="costo" >-->
             <label style="font-style: 'Open Sans', sans-serif;font-size: 16px;font-weight: bold;">Nuova Password</label>
             <input type="password" id="password" name="password" >
-            <!--<label style="font-style: 'Open Sans', sans-serif;font-size: 16px;font-weight: bold;">Conferma Password</label>
-            <input type="password" id="password" name="password" >
-            <label style="font-style: 'Open Sans', sans-serif;font-size: 16px;font-weight: bold;">Immagine Profilo</label>
-            <input type="file" id="imgprofilo" name="imgprofilo" style="background-color: white;">-->
             <button type="submit" name="register" style="width: 100px;">REIMPOSTA</button>
         </form>
         <script src="js/jquery.min.js"></script>
