--- a/View/riepilogoappuntamento.html
+++ b/View/riepilogoappuntamento.html
@@ -28,6 +28,7 @@
 
         <link href="casipaziente.css" rel="stylesheet">
         <link href="font.css" rel="stylesheet">
+        <link href="responsive.css" rel="stylesheet">
 <!--
 
 TemplateMo 566 Medic Care
@@ -74,7 +75,7 @@ https://templatemo.com/tm-566-medic-care
                                 <a class="nav-link" href="visualizzastoricoesami_profilopaziente.html">Visualizza Storico Esami</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="profilopaziente.php">Profilo Personale</a>
+                                <a class="nav-link" href="profilopaziente.html">Profilo Personale</a>
                             </li>
                         </ul>
                     </div>
@@ -86,22 +87,22 @@ https://templatemo.com/tm-566-medic-care
         <div class="container">
             <div class="row">
                 <div class="col">
-                        <h1>Riepilogo Dettagli Appuntamento</h1>
+                        <h2>Riepilogo Dettagli Appuntamento</h2>
                         <br>
-                            <h2>Esame: Visita Cardiologica</h2>
+                            <h3>Esame: Visita Cardiologica</h3>
                             <br>
-                            <h2>Medico: Emanuele Papile&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;5/5</h2>
+                            <h3>Medico: Emanuele Papile&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;5/5</h3>
                             <br>
-                            <h2>Costo: 70€</h2>
+                            <h3>Costo: 70€</h3>
                             <br>
-                            <h2>Data: 07/08/24</h2>
+                            <h3>Data: 07/08/24</h3>
                             <br>
-                            <h2>Ora: 11:30</h2>
+                            <h3>Ora: 11:30</h3>
                             <br><br><br>
-                            <div style="position: absolute;left: 550px;">
-                                <button type="submit" class="btn btn-primary" style="width: 140px;height: 35px;">Annulla</button>
+                            <div >
+                                <button type="submit" class="btn btn-primary" id="annulla">Annulla</button>
                                 &ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;
-                                <button type="submit" class="btn btn-primary" style="width: 140px;height: 35px;">Conferma</button>
+                                <button type="submit" class="btn btn-primary" id="conferma">Conferma</button>
                             </div>
                     
                 </div>
