--- a/View/rispostarecensione_profilomedico.html
+++ b/View/rispostarecensione_profilomedico.html
@@ -28,6 +28,7 @@
 
         <link href="css/templatemo-medic-care.css" rel="stylesheet">
 
+        <link href="responsive.css" rel="stylesheet">
 <!--
 
 TemplateMo 566 Medic Care
@@ -95,25 +96,25 @@ https://templatemo.com/tm-566-medic-care
             <div class="row">
                 <div class="col">
                     <br>
-                    <h1>Risposta Recensione</h1>
-                    <br><br>
-                    <h2>Paziente : Giacomo Giannini</h2>
+                    <h2>Risposta Recensione</h2>
                     <br>
-                    <h2>Categoria : Neurologia &ensp;&ensp;&ensp;&ensp;Costo: 70€</h2>
+                    <h3>Paziente : Giacomo Giannini</h3>
                     <br>
-                    <h2>Data : 01/06/2024 &ensp;&ensp;&ensp;&ensp; Ora: 11:30</h2>
+                    <h3>Categoria : Neurologia &ensp;&ensp;&ensp;&ensp;Costo: 70€</h3>
+                    <br>
+                    <h3>Data : 01/06/2024 &ensp;&ensp;&ensp;&ensp; Ora: 11:30</h3>
                     <br>
                     <form action="#">
                         <div class="form-group"></div>
-                            <h3><label for="oggetto">Oggetto Risposta: </label>
+                            <h4><label for="oggetto">Oggetto Risposta: </label>
                             <input id="oggetto" name="oggetto" style="width: 800px;height: 35px;">
                             <br><br><label for="contenuto">Contenuto Risposta:</label>
-                            <input id="contenuto" name="contenuto" style="width: 800px;height: 170px;"></h3>
+                            <input id="contenuto" name="contenuto" style="width: 800px;height: 170px;"></h4>
                             <br><br>
-                            <div style="position: absolute;left: 550px;">
-                                <button type="submit" class="btn btn-primary" style="width: 140px;height: 35px;">Annulla</button>
+                            <div >
+                                <button type="submit" class="btn btn-primary" id="annulla">Annulla</button>
                                 &ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;
-                                <button type="submit" class="btn btn-primary" style="width: 140px;height: 35px;">Conferma</button>
+                                <button type="submit" class="btn btn-primary" id="conferma">Conferma</button>
                                 </div>
                         </div>
                     </form>
