--- a/View/visualizzaesami_prenotazione.html
+++ b/View/visualizzaesami_prenotazione.html
@@ -31,6 +31,7 @@
 
     <link href="font.css" rel="stylesheet">
     <link rel="stylesheet" href="casipaziente.css">
+    <link rel="stylesheet" href="responsive.css">
 
 </head>
 
