--- a/View/visualizzaesamiprenotati_profilopaziente.html
+++ b/View/visualizzaesamiprenotati_profilopaziente.html
@@ -29,6 +29,7 @@
         <link rel="stylesheet" href="casipaziente.css">
 
         <link href="font.css" rel="stylesheet">
+        <link href="responsive.css" rel="stylesheet">
 <!--
 
 TemplateMo 566 Medic Care
@@ -74,7 +75,7 @@ https://templatemo.com/tm-566-medic-care
                                 <a class="nav-link" href="visualizzastoricoesami_profilopaziente.html">Visualizza Storico Esami</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="profilopaziente.php">Profilo Personale</a>
+                                <a class="nav-link" href="profilopaziente.html">Profilo Personale</a>
                             </li>
                         </ul>
                     </div>
