--- a/View/visualizzastatistiche.html
+++ b/View/visualizzastatistiche.html
@@ -28,6 +28,7 @@
 
         <link href="casimedico.css" rel="stylesheet">
         <link href="font.css" rel="stylesheet">
+        <link href="responsive.css" rel="stylesheet">
         <script src="https://cdn.anychart.com/releases/8.10.0/js/anychart-base.min.js"></script>
         <style type="text/css">      
       html, body, #container { 
@@ -98,7 +99,7 @@ https://templatemo.com/tm-566-medic-care
 
         </main>
         <br><br><br><br><br>
-        <div id="container" style="height: 600px;" >
+        <div id="container" style="height: 500px;" >
         <h2>Statistiche nell'intervallo di tempo selezionato</h2>
         <br>
         <script>
@@ -154,7 +155,7 @@ https://templatemo.com/tm-566-medic-care
         </script>
     </div>
     <br><br><br><br>
-    <div style="position: absolute;left: 650px;">
+    <div>
     <button class="btn btn-primary">Cambia intervallo di tempo</button>
     </div>
         
