--- a/View/visualizzastoricoesamipaziente_profilomedico.html
+++ b/View/visualizzastoricoesamipaziente_profilomedico.html
@@ -26,7 +26,8 @@
 
         <link href="css/templatemo-medic-care.css" rel="stylesheet">
         <link href="casimedico.css" rel="stylesheet">
-        <link href="font.css" rel="stylesheet">   
+        <link href="font.css" rel="stylesheet">
+        <link href="responsive.css" rel="stylesheet">
 <!--
 
 TemplateMo 566 Medic Care
