--- a/View/index.html
+++ b/View/index.html
@@ -26,6 +26,7 @@
 
         <link href="css/templatemo-medic-care.css" rel="stylesheet">
         <link href="font.css" rel="stylesheet">
+        <link href="responsive.css" rel="stylesheet">
 <!--
 
 TemplateMo 566 Medic Care
@@ -81,6 +82,7 @@ https://templatemo.com/tm-566-medic-care
                     </div>
                 </div>
             </section>
+            <!--
             <section class="section-padding pb-0" id="reviews">
                 <div class="container">
                     <div class="row">
@@ -184,7 +186,7 @@ https://templatemo.com/tm-566-medic-care
                     </div>
                 </div>
             </section>
-        </main>
+        </main>-->
 
         <footer class="site-footer section-padding" id="contact">
             <div class="container">
