--- a/View/inseriscidata_perstatistiche.html
+++ b/View/inseriscidata_perstatistiche.html
@@ -28,6 +28,7 @@
 
         <link href="casimedico.css" rel="stylesheet">
         <link href="font.css" rel="stylesheet">
+        <link href="responsive.css" rel="stylesheet">
 <!--
 
 TemplateMo 566 Medic Care
