--- a/View/inseriscireferto.html
+++ b/View/inseriscireferto.html
@@ -29,6 +29,7 @@
         <link href="font.css" rel="stylesheet">
 
         <link href="casimedico.css" rel="stylesheet">
+        <link href="responsive.css" rel="stylesheet">
 
 <!--
 
@@ -97,27 +98,27 @@ https://templatemo.com/tm-566-medic-care
             <div class="row">
                 <div class="col">
                     <br>
-                    <h1>Caricamento Referto</h1>
+                    <h2>Caricamento Referto</h2>
                     <br>
-                    <h2>Esame di Giacomo Giannini</h2>
+                    <h3>Esame di Giacomo Giannini</h3>
                     <br>
-                    <h2>Categoria : Neurologia &ensp;&ensp;&ensp;&ensp;Costo: 70€</h2>
+                    <h3>Categoria : Neurologia &ensp;&ensp;&ensp;&ensp;Costo: 70€</h3>
                     <br>
-                    <h2>Data : 01/06/2024 &ensp;&ensp;&ensp;&ensp; Ora: 11:30</h2>
+                    <h3>Data : 01/06/2024 &ensp;&ensp;&ensp;&ensp; Ora: 11:30</h3>
                     <br><br>
                     <form action="#">
-                            <h3><label for="oggetto">Oggetto Referto: </label>
-                            <input type="text" id="oggetto" name="oggetto" style="width: 800px;height: 35px;"/></h3>
-                            <br><h3><label for="contenuto">Contenuto Referto:</label>
-                            <input type="text" id="contenuto" name="contenuto" style="width: 800px;height: 170px;"></h3>
+                            <h4><label for="oggettoref">Oggetto Referto: </label>
+                            <input type="text" id="oggetto" name="oggetto" style="width: 800px;height: 35px;"/></h4>
+                            <br><h4><label for="contenutoref">Contenuto Referto:</label>
+                            <input type="text" id="contenuto" name="contenuto" style="width: 800px;height: 100px;"></h4>
                             <br><br>
-                            <h3><label for="fileref">File Referto: </label>
-                            <input id="fileref" name="fileref" style="width: 800px;" type="file"></h3>
+                            <h4><label for="fileref">File Referto: </label>
+                            <input id="fileref" name="fileref"  type="file"></h4>
                             <br><br>
-                            <div style="position: absolute;left: 550px;">
-                                <button type="submit" class="btn btn-primary" style="width: 140px;height: 35px;">Annulla</button>
+                            <div >
+                                <button type="submit" class="btn btn-primary" id="annulla">Annulla</button>
                                 &ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;
-                                <button type="submit" class="btn btn-primary" style="width: 140px;height: 35px;">Conferma</button>
+                                <button type="submit" class="btn btn-primary" id="conferma">Conferma</button>
                             </div>
 
                     </form>
