--- a/View/registermedico.html
+++ b/View/registermedico.html
@@ -26,6 +26,7 @@
         <link href="font.css" rel="stylesheet">
 
         <link rel="stylesheet" href="logregstyle.css">
+        <link href="responsive.css" rel="stylesheet">
         
     </head>
     <body style="background-color: #9fc2fa;">
