--- a/View/responsive.css
+++ b/View/responsive.css
@@ -6,8 +6,17 @@ html {font-size:100%;}
         .btn{
             font-size: 0.5rem;
         }
+        h1{
+            font-size: 1.6rem;
+        }
         h2{
             font-size: 1.4rem;
+        }
+        h3{
+            font-size: 1.2rem;
+        }
+        h4{
+            font-size: 1rem;
         }
         .bottonitab{
             /*position: absolute;
@@ -31,8 +40,17 @@ html {font-size:100%;}
     .btn{
         font-size: 0.7rem;
     }
+    h1{
+        font-size: 1.8rem;
+    }
     h2{
         font-size: 1.6rem;
+    }
+    h3{
+        font-size: 1.4rem;
+    }
+    h4{
+        font-size: 1.2rem;
     }
     .bottonitab{
         /*position: absolute;
@@ -56,8 +74,17 @@ html {font-size:100%;}
     .btn{
         font-size: 0.9rem;
     }
+    h1{
+        font-size: 2rem;
+    }
     h2{
         font-size: 1.8rem;
+    }
+    h3{
+        font-size: 1.6rem;
+    }
+    h4{
+        font-size: 1.4rem;
     }
     .bottonitab{
         /*position: absolute;
@@ -78,11 +105,20 @@ html {font-size:100%;}
     
     @media (min-width:1100px) { 
     body,thead,tbody,tr,th,td {font-size:1.2rem;}
+    h1{
+        font-size: 2.2rem;
+    }
     h2{
         font-size: 2rem;
     }
+    h3{
+        font-size: 1.8rem;
+    }
+    h4{
+        font-size: 1.6rem;
+    }
     .btn{
-        font-size: 1.1rem;
+        font-size: 1.4rem;
     }
     .bottonitab{
         /*position: relative;
