--- a/View/sceltalogin.html
+++ b/View/sceltalogin.html
@@ -6,6 +6,7 @@
         <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Open+Sans&display=swap">
         <link rel="stylesheet" href="logregstyle.css">
         <link href="font.css" rel="stylesheet">
+        <link href="responsive.css" rel="stylesheet">
     </head>
     <body>
         <h1 style="font-size: 45px;text-align: center;">SCELTA UTENTE ACCESSO</h1>
