--- a/View/visualizzarecensioni_profilomedico.html
+++ b/View/visualizzarecensioni_profilomedico.html
@@ -27,6 +27,7 @@
         <link href="css/owl.theme.default.min.css" rel="stylesheet">
 
         <link href="css/templatemo-medic-care.css" rel="stylesheet">
+        <link href="responsive.css" rel="stylesheet">
 <!--
 
 TemplateMo 566 Medic Care
