--- a/View/visualizzastoricoesami_profilopaziente.html
+++ b/View/visualizzastoricoesami_profilopaziente.html
@@ -29,6 +29,7 @@
         <link rel="stylesheet" href="casipaziente.css">
 
         <link href="font.css" rel="stylesheet">
+        <link href="responsive.css" rel="stylesheet">
 <!--
 
 TemplateMo 566 Medic Care
